# ai-support-hitl

./: .dockerignore  .flake8  .gitignore  .pylintrc  README.md  create_vector_DB_of_policy.ipynb  create_vector_DB_of_previous_record.ipynb  delete.py  docker-compose.yaml  fetches_from_db.py  main.ipynb  main.py  promtail-config.yml  pyproject.toml  requirements.txt  response_drafting_utils.py  sample_data_generation.py  streamlit_app.py  utils.py
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  chore.yml  ci.yml  default.yml  documentation.yml  feature_request.yml  performance.yml  refactor.yml
.github/workflows/: basic.yml  docker_deployment.yml  linting.yml
Company_Info_VectorDB/: chroma.sqlite3
app/: fetches_from_db.py  logger.py  main.py  utils.py
company_policy/: communication_guidelines.txt  company_policy.txt  delivery_and_shipping_policy.txt  payment_issues_policy.txt
data/raw/policy/: account_and_security_policy.txt  cancellation_policy.txt  escalation_guidelines.txt  refund_policy.txt  ticket_closure_rules.txt
data/raw/tickets/: previous_record.json
docker/: Dockerfile  docker-compose.yaml
sample data/: pending_tickets.json
scripts/: sample_data_generation.py
